syntax = "proto3";

package users;

option go_package = "github.com/ThreeDotsLabs/wild-workouts-go-ddd-example/internal/users";

import "google/protobuf/empty.proto";

service UsersService {
  rpc GetTrainingBalance(GetTrainingBalanceRequest) returns (GetTrainingBalanceResponse) {}
  rpc UpdateTrainingBalance(UpdateTrainingBalanceRequest) returns (google.protobuf.Empty) {}
}

message GetTrainingBalanceRequest {
  string user_id = 1;
}

message GetTrainingBalanceResponse {
  int64 amount = 1;
}

message UpdateTrainingBalanceRequest {
  string user_id = 1;
  int64 amount_change = 2;
}
